--- a/index.html
+++ b/index.html
@@ -13,19 +13,22 @@
         <div class="container">
             <nav>
                 <img src="img/logo.png" alt="Company logo" class="logo">
-                <ul id="sidemenu">
-                    <li><a href="#header">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <i class="fas fa-times" onclick="closemenu()"></i>
+                <ul>
+                    <li><a class="navlink" onclick="togglemenu()" href="#header">Home</a></li>
+                    <li><a class="navlink" onclick="togglemenu()" href="#about">About</a></li>
+                    <li><a class="navlink" onclick="togglemenu()" href="#services">Services</a></li>
+                    <li><a class="navlink" onclick="togglemenu()" href="#portfolio">Portfolio</a></li>
+                    <li><a class="navlink" onclick="togglemenu()" href="#contact">Contact</a></li>
                 </ul>
-                <i class="fas fa-bars" onclick="openmenu()"></i>
+                <div id="burger" class="burger" onclick="togglemenu()">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </nav>
             <div class="header-text">
                 <p>UI/UX Designer</p>
-                <h1>Him I'm <span>Kevin</span><br>Jen From Australia</h1>
+                <h1>Hi, I'm <span>Kevin</span><br>Jen From Australia</h1>
             </div>
         </div>
     </div>
@@ -160,6 +163,9 @@
             <p>Copyright &copy; Kelvin. Made with <i class="fas fa-heart"></i> by Easy Tutorials</p>
         </div>
     </div>
+    <div class="blocker" onclick="togglemenu()">
+        <!-- This elememt serves as a blocker to the rest of the screen when the burger is active. -->
+    </div>
 
     <script>
 
@@ -180,16 +186,19 @@
 
     <script>
 
-        var sidemeneu = document.getElementById("sidemenu");
+        const burger = document.querySelector("#burger");
+        const menu = document.querySelector("nav ul");
+        const blocker = document.querySelector(".blocker");
+        const body = document.querySelector("body");
+        var links = document.querySelectorAll(".navlink");
 
-        function openmenu() {
-            sidemenu.style.right = "0";
+
+        function togglemenu() {
+            burger.classList.toggle("active");
+            menu.classList.toggle("active");
+            blocker.classList.toggle("active");
+            body.classList.toggle("freeze");
         }
-
-        function closemenu() {
-            sidemenu.style.right = "-200px";
-        }
-
     </script>
 </body>
 </html> 
